fixed stupid titles overflow

--- a/src/non-essential-content/goals.css
+++ b/src/non-essential-content/goals.css
@@ -89,6 +89,7 @@ form > label {
 .title {
     font-size: 2rem;
     max-width: 40vw;
+    overflow-x: auto;
 }
 
 .goal-text {
